--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ aiohttp==3.11.10
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.7.0
+asttokens==3.0.0
 attrs==24.3.0
 blinker==1.9.0
 certifi==2024.12.14
 charset-normalizer==3.4.0
 click==8.1.7
+decorator==5.1.1
 deprecation==2.1.0
+executing==2.1.0
 Flask==3.1.0
 frozenlist==1.5.0
 gotrue==2.11.0
@@ -19,26 +22,38 @@ httpcore==1.0.7
 httpx==0.27.2
 hyperframe==6.0.1
 idna==3.10
+ipython==8.30.0
 itsdangerous==2.2.0
+jedi==0.19.2
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
 multidict==6.1.0
 packaging==24.2
+parso==0.8.4
+pexpect==4.9.0
 postgrest==0.18.0
+prompt_toolkit==3.0.48
 propcache==0.2.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pydantic==2.10.3
 pydantic_core==2.27.1
+Pygments==2.18.0
 python-dateutil==2.9.0.post0
 realtime==2.0.6
 requests==2.32.3
 six==1.17.0
 sniffio==1.3.1
+stack-data==0.6.3
 storage3==0.9.0
 supabase==2.10.0
 supafunc==0.7.0
+traitlets==5.14.3
 typing_extensions==4.12.2
 urllib3==2.2.3
+wcwidth==0.2.13
 websockets==13.1
 Werkzeug==3.1.3
 yarl==1.18.3
-gunicorn==23.0.0
+ipdb==0.13.13
